--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.0",
+    "eslint-plugin-react": "^7.0.0",
     "react-scripts": "0.9.5"
   },
   "dependencies": {
     "axios": "^0.16.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
+    "eslint": "^3.19.0",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "querystring": "^0.2.0",
