--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
     ],
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    },
+    "globals": {
+      "localStorage": true
     }
 }
