--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "styled-components": "^1.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
