--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
+    "glamor": "^2.20.25",
+    "glamorous": "^3.13.3",
     "morgan": "^1.8.1",
     "querystring": "^0.2.0",
     "react": "^15.5.4",
