--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.2",
     "glamor": "^2.20.25",
     "glamorous": "^3.13.3",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.1",
     "querystring": "^0.2.0",
     "react": "^15.5.4",
