--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "3.0.1",
     "eslint-plugin-react": "^7.0.0",
     "react-scripts": "0.9.5"
   },
